--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 .then(data => {
                     if (data.estado === "ok") {
                         // Mostrar el popup
-                        document.getElementById("registroExitosoPopup").style.display = "block";
+                        document.getElementById("registroExitosoPopup").style.display = "flex";
                     } else if (data.estado === "ya_registrado") {
                         console.log("El popup ya fue mostrado anteriormente.");
                     } else {
