--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Sección Hero -->
         <header class="navbar">
             <div class="navbar__logo">
-                <img src="/assets/img/logo2.png" alt="Logo" />
+                <img src="/assets/img/new logotipo.png" alt="Logo" />
             </div>
             <nav class="navbar__links">
                 <a href="#">Info</a>
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="hero__logo">
-                <img src="/assets/img/logo penege.png" alt="Calorie & Macro Calculator Logo" />
+                <img src="/assets/img/new logo clean.png" alt="Calorie & Macro Calculator Logo" />
             </div>
         </section>
         <section class="nuestro-objetivo" id="nuestro-objetivo">
