--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img src="/assets/img/new logotipo.png" alt="Logo" />
             </div>
             <nav class="navbar__links">
-                <a href="#">Info</a>
+                <a href="/Views/user/api-chat.html">Chatea con nuestra IA!</a>
                 <a href="#nuestro-objetivo">Sobre Nosotros</a>
                 <a href="/Views/default/login.html" id="login-link">Login</a>
             </nav>
