mejoras en el index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <!-- Sección Hero -->
         <header class="navbar">
             <div class="navbar__logo">
-                <img src="/assets/img/new logotipo.png" alt="Logo" />
+               
+                <a href="index.html"> <img src="/assets/img/logoonly.png" alt="Logo" /></a>
             </div>
             <nav class="navbar__links">
                 <a href="/Views/user/api-chat.html">Chatea con nuestra IA!</a>
@@ -40,7 +41,7 @@
                 </div>
             </div>
             <div class="hero__logo">
-                <img src="/assets/img/new logo clean.png" alt="Calorie & Macro Calculator Logo" />
+                <img src="/assets/img/Logo_finale.png" alt="Calorie & Macro Calculator Logo" />
             </div>
         </section>
         <section class="nuestro-objetivo" id="nuestro-objetivo">
