agregada la ia para la subida, falta el back

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="nuestro-objetivo-info">
                 <h2>Nuestro Objetivo</h2>
-                <h3>Pérdida de Peso Individualizada y Sostenible</h3>
+                <h3>Control de Peso Individualizado y Sostenible</h3>
                 <p>
                     Nuestra misión es empoderar a cualquiera para alcanzar su peso deseado
                     a través de una pérdida de peso individualizada y sostenible, porque
