cambios en el css

--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
                 </div>
             </div>
         </div>
+        <footer>
+
+            
+        </footer>
     </body>
     <script src="/assets/javascript/script.js">
     </script>
